--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,3 +17,12 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/fonts/Inter/
+
+  fonts:
+    - family: Inter
+      fonts:
+        - asset: assets/fonts/Inter/static/Inter_24pt-SemiBold.ttf
+        - asset: assets/fonts/Inter/static/Inter_24pt-Regular.ttf
